<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_news"
        android:icon="@drawable/vk_icon_newsfeed_28"
        android:title="@string/newsfeed" />
    <item
        android:id="@+id/tab_discover"
        android:icon="@drawable/vk_icon_services_outline_28"
        android:title="@string/search" />
    <item
        android:id="@+id/tab_messages"
        android:icon="@drawable/vk_icon_message_outline_28"
        android:title="@string/messages" />
    <item
        android:id="@+id/tab_clips"
        android:icon="@drawable/vk_icon_clip_outline_28"
        android:title="@string/not_notifications" />
    <item
        android:id="@+id/tab_menu"
        android:icon="@drawable/vk_icon_profile_28"
        android:title="@string/menu" />
</menu>
