<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:orientation="horizontal">

        <com.robertlevonyan.views.chip.Chip
            android:id="@+id/hot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vk_tt_commons_medium"
            android:text="@string/hot"
            app:mcv_selectable="true" />

        <com.robertlevonyan.views.chip.Chip
            android:id="@+id/friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/vk_tt_commons_medium"
            android:text="@string/friends"
            app:mcv_selectable="true" />

        <com.robertlevonyan.views.chip.Chip
            android:id="@+id/photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/vk_tt_commons_medium"
            android:text="@string/chip_photos"
            app:mcv_selectable="true" />

    </LinearLayout>

    <TextView
        android:id="@+id/progressView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:background="#20B5B2B2"
        android:gravity="center"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textColor="@color/uikit_black"
        android:textSize="12sp"
        android:visibility="gone"
        tools:visibility="visible" />

</FrameLayout>
