<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never" />

    <LinearLayout
        android:id="@+id/permissionsNotice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textWithIcon"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center_horizontal"
            android:text="@string/permissions_required"
            android:textColor="@color/uikit_white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/subText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/app_access_permission_rationale"
            android:textColor="@color/uikit_gray"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btnRepeat"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow"
            android:textColor="@color/uikit_accent" />

    </LinearLayout>

</FrameLayout>
